tests/golden/frontend/invalid/resolve_unknown_type.vit
proc main() -> MissingType {
  give 1
}
